# yc-hackathon

./: CLAUDE.md  README.md  pyproject.toml
.claude/skills/agent-spawning-protocol/: SKILL.md
.claude/skills/dataset-preprocessing-workflow/: SKILL.md
.claude/skills/gene-resolver/: SKILL.md
.claude/skills/lancedb-query/: SKILL.md
.claude/skills/molecule-resolver/: SKILL.md
.claude/skills/molecule-resolver/references/: schema_reference.md
.claude/skills/output-routing-workflow/: SKILL.md
.claude/skills/paper-search-workflow/: SKILL.md
.claude/skills/perturbation-type-router/: SKILL.md
.claude/skills/query-understanding-workflow/: SKILL.md
docs/: index.html
scripts/: create_indexes.py
src/ych/: atlas_search.py  ingestion_utils.py  schema.py
src/ych/skills/gene-resolver/: SKILL.md
src/ych/skills/gene-resolver/references/: schema_reference.md
src/ych/skills/molecule-resolver/: SKILL.md
tasks/: todo.md
